# Recruitment-Portal

./: .gitignore
backend/: main.py  pyproject.toml
backend/app/: __init__.py  utils.py
backend/app/models/: __init__.py  job.py  todo.py  user.py
backend/app/resources/: __init__.py  jobs.py  test.py  todo.py  webhooks.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/components/: Navbar.vue  SignIn.vue  Signup.vue
frontend/src/router/: index.js
frontend/src/stores/: auth.js
frontend/src/views/: CandidateDashboard.vue  Dashboard.vue  HrDashboard.vue  LandingView.vue  RecruiterDashboard.vue  SignUpIn.vue  UserDashboard.vue
